--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,6 +29,10 @@ border: none;
 box-shadow: 1px 1px 1px #4C6E91;
 }
 
+#issue_count{
+	font-size: 50px;
+	
+}
 
 input[type="submit"]:hover {
 background: steelblue;
