--- a/templates/home.html
+++ b/templates/home.html
@@ -52,9 +52,13 @@
 	</head>
 	<body onload="initialize()">
 		<h1>Highlight Problems Around you!</h1>
-		<p>Tell us about the problems in your neighborhood, crimes, injustuce, poor administration, corruption so that people we select can fix those issues. The goal of this website is to collect observations from the public about the problems they see around them
-		and communicate them to a government to work on. Since the idea is to gather local neighborhood concerns as a first step
-	towards improving the communities and move the governence to a more data-savy direction</p>
+		<p>The goal of this website is to allow citizens to register their concerns and the relevant government bodies to take action.  It is high time that the government should rely on data to get its priorities straight and a platform for the public to raise their voices!</p>
+	
+	<label for="count">Number of issues submitted so far: </label> 
+	<output name="count"><div id="issue_count">{{count}}</div></output>
+
+
+	<output></output>
 		<div id="input_collection_block">
 			<div id="map-canvas"></div>
 			<div id="community_issues">
@@ -62,13 +66,9 @@
 				<form action="/submit_issue" method="POST">
 					<label for="Category">Category</label>
 					<select name="category" id="category">
-						
-						<option value="Corruption">Corruption</option>
-						<option value="Injustice">Injustice</option>
-						<option value="Traffic">Traffic</option>
-						<option value="Theft">Theft</option>
-						<option value="Deception">Deception</option>
-						
+						{% for i in categories %}
+							<option value="{{i}}">{{i}}</option>
+						{% endfor %}
 					</select>
 					<label for="date">Date</label>
 					<input name="date" id="date" type="date">
