GOOGLE MAPS API key added

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Community Problems</title>
 		<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js
+		?key={{MAPS_KEY}}"></script>
 		<script type="text/javascript">
 			var map;
 			var marker;
