--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,13 @@
 		<script type="text/javascript">
 			var map;
 			var marker;
+
+
 			function initialize() {
 				
 				var mapOptions = {
 				center: new google.maps.LatLng({{lat}}, {{long}}),
-				zoom: 15
+				zoom: 2
 				};
 				map = new
 				google.maps.Map(document.getElementById("map-canvas"),mapOptions);
@@ -47,6 +49,19 @@
 						}
 						}
 				placeCrimes({{data | safe}});
+
+
+				function animateMapZoomTo(map, targetZoom) {
+				    var currentZoom = arguments[2] || map.getZoom();
+				    if (currentZoom != targetZoom) {
+				        google.maps.event.addListenerOnce(map, 'zoom_changed', function (event) {
+				            animateMapZoomTo(map, targetZoom, currentZoom + (targetZoom > currentZoom ? 1 : -1));
+				        });
+				        setTimeout(function(){ map.setZoom(currentZoom) }, 300);
+				    }
+				}
+			
+		animateMapZoomTo(map, 15);
 
 	}
 		</script>
